Cambios en pipeline azure

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@
 #        kubernetesServiceConnection: 'your-aks'
 
 
-# Trigger automático en push a main
+# Trigger en push a main
 trigger:
 - main
 - develop
