--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,54 +26,65 @@
 #        kubernetesServiceConnection: 'your-aks'
 
 
-
+# azure-pipelines.yml (crear en la raíz de tu repositorio)
 trigger:
-- main
-- develop
+- main  # o master, según tu rama principal
 
 pool:
-  vmImage: 'ubuntu-latest'
+  name: 'Default'  # Pool donde está tu self-hosted agent
+  demands:
+  - agent.name -equals local-agent
 
 variables:
-  containerRegistry: 'ProyectoeRedes.azurecr.io'  # Tu ACR
-  imageRepository: 'python-web-app'
+  dockerRegistryServiceConnection: 'dockerhub-connection'
+  imageRepository: 'trascendant/proyecto-redes'
+  containerRegistry: 'docker.io'
   dockerfilePath: '$(Build.SourcesDirectory)/Dockerfile'
   tag: '$(Build.BuildId)'
-  dockerRegistryServiceConnection: 'azure-container-registry'  # Tu service connection
 
 stages:
-# STAGE 1: BUILD - Solo construir y subir imagen
 - stage: Build
   displayName: 'Build and Push Docker Image'
   jobs:
   - job: Build
     displayName: 'Build Docker Image'
     steps:
-    
-    # Mostrar información del build
-    - script: |
-        echo "Building $(imageRepository):$(tag)"
-        echo "Source branch: $(Build.SourceBranch)"
-        echo "Commit: $(Build.SourceVersion)"
-        echo "Files in repository:"
-        ls -la $(Build.SourcesDirectory)
-      displayName: 'Show build info'
-    
-    # Construir y subir imagen Docker
     - task: Docker@2
-      displayName: 'Build and push Docker image'
+      displayName: 'Build Docker Image'
       inputs:
-        command: 'buildAndPush'
-        repository: '$(imageRepository)'
+        command: 'build'
         dockerfile: '$(dockerfilePath)'
-        containerRegistry: '$(dockerRegistryServiceConnection)'
         tags: |
           $(tag)
           latest
+        repository: '$(imageRepository)'
     
-    # Verificar que la imagen se subió correctamente
+    - task: Docker@2
+      displayName: 'Push Docker Image'
+      inputs:
+        command: 'push'
+        repository: '$(imageRepository)'
+        tags: |
+          $(tag)
+          latest
+        containerRegistry: '$(dockerRegistryServiceConnection)'
+
+- stage: Deploy
+  displayName: 'Deploy to Local'
+  dependsOn: Build
+  jobs:
+  - job: Deploy
+    displayName: 'Deploy Application'
+    steps:
     - script: |
-        echo "✅ Docker image built and pushed successfully!"
-        echo "Image: $(containerRegistry)/$(imageRepository):$(tag)"
-        echo "Also tagged as: $(containerRegistry)/$(imageRepository):latest"
-      displayName: 'Build completed'
+        # Detener contenedor anterior si existe
+        docker stop proyecto-redes || true
+        docker rm proyecto-redes || true
+        
+        # Ejecutar nueva imagen
+        docker run -d --name proyecto-redes -p 5000:5000 $(imageRepository):$(tag)
+        
+        # Verificar que esté corriendo
+        sleep 10
+        curl -f http://localhost:5000/health || exit 1
+      displayName: 'Deploy New Container'
