--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,27 +1,27 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: python-web-app
+  name: proyecto-redes-deployment
   labels:
-    app: python-web-app
+    app: proyecto-redes
 spec:
-  replicas: 2
+  replicas: 3
   selector:
     matchLabels:
-      app: python-web-app
+      app: proyecto-redes
   template:
     metadata:
       labels:
-        app: python-web-app
+        app: proyecto-redes
     spec:
       containers:
-      - name: python-web-app
-        image: your-acr.azurecr.io/python-web-app:latest
+      - name: proyecto-redes
+        image: trascendant/proyecto-redes:latest
         ports:
         - containerPort: 5000
         env:
-        - name: ENVIRONMENT
-          value: "kubernetes"
+        - name: PORT
+          value: "5000"
         resources:
           requests:
             memory: "128Mi"
@@ -41,3 +41,16 @@ spec:
             port: 5000
           initialDelaySeconds: 5
           periodSeconds: 5
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: proyecto-redes-service
+spec:
+  selector:
+    app: proyecto-redes
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 5000
+  type: LoadBalancer
